test/bad/ret_val_outer.lat
int main() {
    boolean b = f();
}

int f() {
    return 1;
}
